src/style/globals.css
@import url("https://fonts.googleapis.com/css2?family=Urbanist:wght@100;200;300;400;500;600;700;800;900&display=swap");
@import url(var.css);

*,
*::before,
*::after {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

html {
	scroll-behavior: smooth;
	width: 100vw;
}

body {
	width: 100vw;
	display: flex;
	flex-direction: column;
	position: relative;
	justify-content: center;
	background-color: var(--background);
}

html * {
	font-family: "Urbanist", sans-serif;
}

a {
	text-decoration: none;
}

#__next {
	width: 100vw;
}

.section {
	min-height: 100vh;
	width: 100vw;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	position: relative;
	overflow: hidden;
}

.delimiter {
	min-height: 100vh;
	width: 100%;
	max-width: 1980px;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	position: relative;
	overflow: hidden;
}

.betweencontainer {
	min-height: 100vh;
	padding: 50px;
	width: 100%;
	display: flex;
	flex-wrap: wrap;
	flex-direction: column;
	justify-content: space-between;
	align-items: center;
	position: relative;
	overflow: hidden;
}

